[package]
name = "brew_outdated"
version = "0.1.0"
authors = ["Zach Gotsch <orbipedis@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Detect recently run out-of-date executables which are managed by brew"
readme = "README.md"
homepage = "https://github.com/zgotsch/brew_outdated"
repository = "https://github.com/zgotsch/brew_outdated"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
derive_more = "0.99.7"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"
lazy_static = "1.4.0"
regex = "1"
yansi = "0.5.0"
fork = "0.1.14"
